Создано с помощью Colaboratory

--- a/fastapi_dates.ipynb
+++ b/fastapi_dates.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLDAraDtgKFp4aEylET4/6",
+      "authorship_tag": "ABX9TyN6x/Y3XMsmUDyxprqCzLl6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,27 +40,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 74,
       "metadata": {
         "id": "TIKsjS76I_g4"
       },
       "outputs": [],
       "source": [
-        "app = \"\"\"from fastapi import FastAPI, Body\n",
+        "app = \"\"\"from datetime import datetime\n",
+        "from fastapi import FastAPI, Body\n",
         "from pydantic import BaseModel, ValidationError, Field\n",
-        "from sqlalchemy import create_engine, Column, Integer, String\n",
+        "from sqlalchemy import create_engine, Column, Integer, String, DateTime\n",
         "from sqlalchemy.orm import sessionmaker, declarative_base\n",
         "\n",
         "Base = declarative_base()\n",
         "\n",
         "class DateModel(BaseModel):\n",
-        "    date: str = Field(..., format=\"%Y-%m-%d\")\n",
+        "    date: datetime\n",
+        "\n",
+        "class DateResponse(BaseModel):\n",
+        "    date: datetime\n",
         "\n",
         "class DateInDB(Base):\n",
         "    __tablename__ = 'dates'\n",
         "\n",
         "    id: int = Column(Integer, primary_key=True, autoincrement=True)\n",
-        "    date: str = Column(String(10))\n",
+        "    date: datetime = Column(DateTime)\n",
         "\n",
         "app = FastAPI()\n",
         "\n",
@@ -69,16 +73,13 @@
         "\n",
         "Base.metadata.create_all(engine)\n",
         "\n",
-        "@app.post(\"/dates/\", response_model=DateModel)\n",
+        "@app.post(\"/dates/\", response_model=DateResponse)\n",
         "async def create_date(date_data: DateModel = Body(...)):\n",
-        "    try:\n",
-        "        with Session() as session:\n",
-        "            new_date = DateInDB(**date_data.dict())\n",
-        "            session.add(new_date)\n",
-        "            session.commit()\n",
-        "            return {\"date\": new_date.date}\n",
-        "    except ValidationError as e:\n",
-        "        return {\"error\": str(e.errors())}\n",
+        "    with Session() as session:\n",
+        "        new_date = DateInDB(**date_data.dict())\n",
+        "        session.add(new_date)\n",
+        "        session.commit()\n",
+        "        return date_data\n",
         "\"\"\"\n",
         "\n",
         "with open('main.py', 'w') as m:\n",
@@ -98,15 +99,15 @@
           "height": 34
         },
         "id": "0Rkcbb8tJ4-Q",
-        "outputId": "09e3b500-63b9-4ce2-d079-f0390df987b3"
+        "outputId": "14833592-e5a5-4998-d869-0287beeb7675"
       },
-      "execution_count": 23,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "https://cg38ldcpsa-496ff2e9c6d22116-8000-colab.googleusercontent.com/docs\n"
+            "https://dha0eiqz48b-496ff2e9c6d22116-8000-colab.googleusercontent.com/docs\n"
           ]
         }
       ]
@@ -121,22 +122,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "huqSspdkNrEE",
-        "outputId": "4182e8c5-0113-4869-f945-f4ba2871b816"
+        "outputId": "89ba923e-6a51-4afa-e587-92c25ccf2fd2"
       },
-      "execution_count": 28,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2024-03-31 15:54:54,721 INFO     Starting server at tcp:port=8000:interface=127.0.0.1\n",
-            "2024-03-31 15:54:54,721 INFO     HTTP/2 support not enabled (install the http2 and tls Twisted extras)\n",
-            "2024-03-31 15:54:54,721 INFO     Configuring endpoint tcp:port=8000:interface=127.0.0.1\n",
-            "2024-03-31 15:54:54,722 INFO     Listening on TCP address 127.0.0.1:8000\n",
-            "127.0.0.1:43272 - - [31/Mar/2024:15:54:57] \"GET /docs\" 200 939\n",
-            "127.0.0.1:43282 - - [31/Mar/2024:15:54:58] \"GET /openapi.json\" 200 1204\n",
-            "127.0.0.1:45656 - - [31/Mar/2024:15:55:09] \"POST /dates/\" 200 17\n",
-            "2024-03-31 15:55:26,050 INFO     Killed 0 pending application instances\n"
+            "2024-04-01 21:32:56,622 INFO     Starting server at tcp:port=8000:interface=127.0.0.1\n",
+            "2024-04-01 21:32:56,622 INFO     HTTP/2 support not enabled (install the http2 and tls Twisted extras)\n",
+            "2024-04-01 21:32:56,623 INFO     Configuring endpoint tcp:port=8000:interface=127.0.0.1\n",
+            "2024-04-01 21:32:56,624 INFO     Listening on TCP address 127.0.0.1:8000\n",
+            "127.0.0.1:48804 - - [01/Apr/2024:21:32:58] \"GET /docs\" 200 939\n",
+            "127.0.0.1:48820 - - [01/Apr/2024:21:32:58] \"GET /openapi.json\" 200 1360\n",
+            "127.0.0.1:60688 - - [01/Apr/2024:21:33:45] \"POST /dates/\" 200 38\n",
+            "2024-04-01 21:33:59,608 INFO     Killed 0 pending application instances\n"
           ]
         }
       ]
