Создано с помощью Colaboratory

--- a/simple_sigmoid.ipynb
+++ b/simple_sigmoid.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6ltysUo759uBC1XhKXwa2",
+      "authorship_tag": "ABX9TyPrkggAryY00HTvqOvlC5gC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,48 +28,64 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HGMCxWS1ylcI",
-        "outputId": "643c340b-ad08-4ef7-a574-0b6c21e4bf3a"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[ 6.92867481  6.91955334]\n",
-            " [-3.77721199 -3.78296686]]\n",
-            "[[0.02237434 0.02224881]]\n",
-            "[[0.99902166 0.9990127 ]]\n"
-          ]
-        }
-      ],
       "source": [
         "import numpy as np\n",
         "\n",
         "def sigmoid(x):\n",
         "    return 1 / (1 + np.exp(-x))\n",
         "\n",
-        "training_inputs = np.array([[0,1], [1,0]])\n",
-        "training_outputs = np.array([[0,0],[1,1]])\n",
+        "def func(A, B, C, D, training_inputs, training_outputs):\n",
+        "    weights = A * np.random.random((2, 2)) + B\n",
+        "    for i in range(C):\n",
+        "        outputs = sigmoid(np.dot(training_inputs, weights))\n",
+        "        adjustments = np.dot(training_inputs.T, (training_outputs - outputs) * outputs)\n",
+        "        weights += D * adjustments\n",
+        "    return weights\n",
         "\n",
-        "weights = 2 * np.random.random((2,2)) - 1\n",
+        "def find_best_coefficients(training_inputs, training_outputs):\n",
+        "    best_error = np.inf\n",
+        "    best_A, best_B, best_C, best_D = None, None, None, None\n",
+        "    for A in range(-11, 11):\n",
+        "        for B in range(-11, 11):\n",
+        "            for C in range(1, 11):\n",
+        "                for D in range(-11, 11):\n",
+        "                    weights = func(A, B, C, D, training_inputs, training_outputs)\n",
+        "                    error = np.sum(np.square(training_outputs - sigmoid(np.dot(training_inputs, weights))))\n",
+        "                    if error < best_error:\n",
+        "                        best_error = error\n",
+        "                        best_A, best_B, best_C, best_D = A, B, C, D\n",
+        "    return best_A, best_B, best_C, best_D\n",
         "\n",
-        "for i in range(100):\n",
-        "    input_layer = training_inputs\n",
-        "    outputs = sigmoid(np.dot(input_layer, weights))\n",
-        "    error = training_outputs - outputs\n",
-        "    adjustments = np.dot(input_layer.T, error * (outputs))\n",
-        "    weights += 10*adjustments\n",
+        "training_inputs = np.array([[0, 1], [1, 0]])\n",
+        "training_outputs = np.array([[0, 0], [1, 1]])\n",
         "\n",
-        "print(weights)\n",
+        "A, B, C, D = find_best_coefficients(training_inputs, training_outputs)\n",
+        "print(A, B, C, D)\n",
         "\n",
-        "print(sigmoid(np.dot(np.array([[0,1]]), weights)))\n",
-        "print(sigmoid(np.dot(np.array([[1,0]]), weights)))"
+        "weights = func(A, B, C, D, training_inputs, training_outputs)\n",
+        "\n",
+        "\n",
+        "print(sigmoid(np.dot(np.array([[0, 1]]), weights)))\n",
+        "print(sigmoid(np.dot(np.array([[1, 0]]), weights)))"
+      ],
+      "metadata": {
+        "id": "yKjA61-dKDJg",
+        "outputId": "25159eb7-865b-4be9-dfaf-10453506a860",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8 10 3 10\n",
+            "[[0.00274399 0.00228704]]\n",
+            "[[0.99999998 0.99999442]]\n"
+          ]
+        }
       ]
     }
   ]
