Создано с помощью Colaboratory

--- a/simple_sigmoid.ipynb
+++ b/simple_sigmoid.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpb36CuoT/tGc2lv2rksJN",
+      "authorship_tag": "ABX9TyMgBErMYMudkh27rPNTs2Ln",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,13 +34,14 @@
         "def sigmoid(x):\n",
         "   return 1 / (1 + np.exp(-x))\n",
         "\n",
+        "\n",
         "def func(A, B, C, D, training_inputs, training_outputs):\n",
         "   weights = A * np.random.random((2, 2)) + B\n",
-        "   for i in range(C):\n",
+        "   for _ in range(C):\n",
         "       outputs = sigmoid(np.dot(training_inputs, weights))\n",
-        "       adjustments = np.dot(training_inputs.T, (training_outputs - outputs) * outputs)\n",
-        "       weights += D * adjustments\n",
+        "       weights += D * np.dot(training_inputs.T, (training_outputs - outputs) * outputs)\n",
         "   return weights\n",
+        "\n",
         "\n",
         "def find_best_coefficients(training_inputs, training_outputs):\n",
         "   best_error = np.inf\n",
@@ -56,10 +57,10 @@
         "                       best_A, best_B, best_C, best_D = A, B, C, D\n",
         "   return best_A, best_B, best_C, best_D\n",
         "\n",
+        "\n",
         "def calculate_test_error(weights, test_inputs, test_outputs):\n",
-        "   test_outputs_predicted = sigmoid(np.dot(test_inputs, weights))\n",
-        "   test_error = np.sum(np.square(test_outputs - test_outputs_predicted))\n",
-        "   return test_error\n",
+        "   return np.sum(np.square(test_outputs - sigmoid(np.dot(test_inputs, weights))))\n",
+        "\n",
         "\n",
         "training_inputs = np.array([[0, 1], [1, 0]])\n",
         "training_outputs = np.array([[0, 0], [1, 1]])\n",
@@ -81,22 +82,22 @@
       ],
       "metadata": {
         "id": "xTdfOCViR2HK",
-        "outputId": "e771b424-eea5-46dc-cb18-98a1f09a514c",
+        "outputId": "f6643a83-6dd8-4c2c-ccc4-465bc10ae4f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 181,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Best coefficients: 4 9 3 10\n",
-            "Test error: 0.00323\n",
+            "Best coefficients: 9 7 8 10\n",
+            "Test error: 0.00347\n",
             "Predictions on test data:\n",
-            "[[0.00227015 0.05681684]]\n",
-            "[[0.99992371 0.99999552]]\n"
+            "[[0.05777219 0.01151114]]\n",
+            "[[0.99998511 0.99983228]]\n"
           ]
         }
       ]
